Fix a couple of spacing wonks

--- a/app/assets/stylesheets/rich-text-content.css
+++ b/app/assets/stylesheets/rich-text-content.css
@@ -115,7 +115,21 @@
         content: " ·";
       }
     }
-    
+
+    /* Attachment junk get wrapped in a paragraph causing unwanted space */
+    p:has(action-text-attachment) {
+      display: none;
+
+      + * {
+        margin-block-start: 0;
+      }
+    }
+
+    /* Avoid extra space due to empty paragraphs */
+    p:empty {
+      display: none;
+    }
+
     :where(code, pre) {
       background-color: var(--color-canvas);
       border: 1px solid var(--color-ink-lighter);
